# cat-game

./: README.md  cat_game.py  cat_platformer_game.py  check_python_version.py  play.py  pygame.pyi  pyproject.toml  setup.bat  setup.sh
cat_platformer/: __main__.py  game.py
cat_platformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
